fix: grid wrong position

--- a/client/src/Style/components/_navbar.scss
+++ b/client/src/Style/components/_navbar.scss
@@ -73,8 +73,6 @@
             justify-content: baseline;
 
             gap: 10px;
-
-            z-index: 10;
             
             font-size: 20px;
 
